# comet-firmware

./: .gitignore  Cargo.toml  Makefile.toml  README.md  load.jlink
.cargo/: config.toml
src/: init.rs  main.rs
src/init/: types.rs
