[package]
authors = ["Reiji <reiji.210@icloud.com>"]
edition = "2018"
readme = "README.md"
name = "comet-firmware"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
jlink_rtt = "0.1.0"
panic-halt = "0.2.0"

[dependencies.spin]
version = "0.7.0"
default-features = false

[dependencies.heapless]
version = "0.7.10"
features = ["serde"]

[dependencies.uom]
version = "0.32.0"
default-features = false
features = ["si", "f32", "autoconvert"]

[dependencies.stm32f4xx-hal]
version = "0.18.0"
features = ["stm32f411", "rt"]

[dependencies.embedded-hal]
version = "0.2.7"
features = ["unproven"]

# this lets you use `cargo fix`!
[[bin]]
name = "comet-firmware"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
